<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">Universal Music Player</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_songs">Songs</string>
    <string name="browse_artists">Artists</string>
    <string name="browse_albums">Albums</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_years">Years</string>
    <string name="browse_dates">Date Added</string>
    <string name="browse_custom">Custom</string>
	<string name="browse_song_subtitle">Songs</string>
	<string name="browse_artist_subtitle">Songs by Artist</string>
	<string name="browse_album_subtitle">Songs by Album</string>
	<string name="browse_genre_subtitle">Songs by Genre</string>
	<string name="browse_year_subtitle">Songs by Year</string>
	<string name="browse_date_subtitle">Songs by Date Added</string>
    <string name="browse_custom_subtitle">Custom</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">Choose</string>
	<string name="drawer_allmusic_customize">Customize</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
	
	
	<string name="no_permissions">
	    You must allow the app to access your device storage so that it can play your music.
	    You must uninstall and reinstall the app, to allow us to ask for your permission again.
	</string>
    <string name="sort_instructions">
        Tap the sorting options in the order you would like them sorted in (songs will always be the last sorting option). Hit clear to start over.
    </string>
    <string name="sort_option1">Artists</string>
    <string name="sort_option2">Albums</string>
    <string name="sort_option3">Genres</string>
    <string name="sort_option4">Years</string>
    <string name="sort_option5">Date Added</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="month">MM</string>
    <string name="day">dd</string>
    <string name="year">yyyy</string>
    <string name="progress_bar">
        Loading in music, please wait. This may take a few minutes the first time, but will be a lot faster every other time.
    </string>

</resources>
