<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.CustomizeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/include_toolbar" android:id="@+id/toolbar_container"/>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_container"
            android:layout_above="@+id/controls_container"/>

        <TextView
            android:id="@+id/sort_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_below="@+id/toolbar_container"
            android:layout_marginTop="15dp"
            android:text="@string/sort_instructions"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/clear_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/toolbar_container"
            android:layout_marginTop="15dp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/submit_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@+id/controls_container"
            android:layout_marginBottom="15dp"
            android:text="@string/submit" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/img1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:text="1" />

                <Button
                    android:id="@+id/button1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sort_option1" />

                <EditText
                    android:id="@+id/search1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:maxLength="22"
                    android:hint="@string/search"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/img2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:text="2" />

                <Button
                    android:id="@+id/button2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sort_option2" />

                <EditText
                    android:id="@+id/search2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:maxLength="22"
                    android:hint="@string/search"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/img3"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:text="3" />

                <Button
                    android:id="@+id/button3"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sort_option3" />

                <EditText
                    android:id="@+id/search3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:maxLength="22"
                    android:hint="@string/search"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/img4"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:text="4" />

                <Button
                    android:id="@+id/button4"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sort_option4" />

                <EditText
                    android:id="@+id/search4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:inputType="number"
                    android:maxLength="4"
                    android:hint="@string/year"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/img5"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:text="5" />

                <Button
                    android:id="@+id/button5"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sort_option5" />

                <RelativeLayout>
                    <EditText
                        android:id="@+id/search5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:inputType="number"
                        android:maxLength="2"
                        android:hint="@string/day"/>

                    <EditText
                        android:id="@+id/search6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:inputType="number"
                        android:maxLength="2"
                        android:layout_toEndOf="@+id/search5"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/month"/>

                    <EditText
                        android:id="@+id/search7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:inputType="number"
                        android:maxLength="4"
                        android:layout_toEndOf="@+id/search6"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/year"/>
                </RelativeLayout>

            </TableRow>

        </TableLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/controls_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardElevation="8dp">

            <fragment android:name="com.example.android.uamp.ui.PlaybackControlsFragment"
                      android:id="@+id/fragment_playback_controls"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true"
                      tools:layout="@layout/fragment_playback_controls" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>